[gd_scene load_steps=7 format=3 uid="uid://pdf2lp4umrp1"]

[ext_resource type="Script" path="res://enemy.gd" id="1_rs0ea"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gfpa7"]
albedo_color = Color(0.956863, 0, 0.654902, 1)
roughness = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_e4s5i"]
material = SubResource("StandardMaterial3D_gfpa7")

[sub_resource type="SphereShape3D" id="SphereShape3D_i7sdk"]

[sub_resource type="SphereShape3D" id="SphereShape3D_c4ga3"]
radius = 19.7909

[sub_resource type="SphereShape3D" id="SphereShape3D_c1qvn"]
radius = 1.5

[node name="Enemy" type="RigidBody3D"]
script = ExtResource("1_rs0ea")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_e4s5i")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_i7sdk")

[node name="Player detect" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player detect"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0320168, 0, 0)
shape = SubResource("SphereShape3D_c4ga3")

[node name="Bullet hit" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bullet hit"]
shape = SubResource("SphereShape3D_c1qvn")

[connection signal="area_entered" from="Player detect" to="." method="_on_player_detect_area_entered"]
[connection signal="area_exited" from="Player detect" to="." method="_on_player_detect_area_exited"]
[connection signal="area_entered" from="Bullet hit" to="." method="_on_bullet_hit_area_entered"]
